# llvm-experiments

./: .gitignore  CMakeLists.txt  LICENSE  README.md
llvm-backend-x86-machine-passes/: CountInstructionsPass.cpp  DataFlow.h  README.md
llvm-backend-x86-machine-passes/patches/: register-x86-machine-passes.patch
llvm-first-step/: CMakeLists.txt  main.bc  main.cpp
llvm-front-clang-demo/: CMakeLists.txt  declared-methods-c.cpp  diagnostics-c.cpp  lexer-c.cpp  min.c
llvm-front-clang-demo/include/config/: global-config.h.cmake
llvm-front-clang-diagnostic/: CMakeLists.txt  diagnostics-c.cpp
llvm-front-clang-simple-frontend/: CMakeLists.txt  simple-frontend.cpp
llvm-ir-custom-passes/: README.md
llvm-ir-custom-passes/LLVMExperimentPasses/: CMakeLists.txt  FunctionArgumentCount.cpp  FunctionArgumentUsagePass.cpp  RegisterPasses.cpp
llvm-ir-custom-passes/patches/: register-experiment-passes.patch
llvm-ir-first-step/: sum-o1-dis.ll  sum-o1.bc  sum-o1.s  withdebuginfo.ll
llvm-ir-simple-generator/: CMakeLists.txt  simple-generator.cpp
llvm-ir-tests/: binarysearch-O0-dbg.bc  binarysearch-O0-dbg.ll  binarysearch-O0.bc  binarysearch-O0.ll  binarysearch-O2.bc  binarysearch-O2.ll  binarysearch.c  sum-fn.bc  sum-fn.ll  sum-o1.ll  sum.bc  sum.c  sum.ll  withdebuginfo.bc  withdebuginfo.c
llvm-unit-tests/: CMakeLists.txt  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  binarysearch-test.cpp  simple-generator-test.cpp
